--- a/pkg/synthesis/tests_expected_output/k8s_resources/Example1dExternalWithSegments_NoHint/policies.yaml
+++ b/pkg/synthesis/tests_expected_output/k8s_resources/Example1dExternalWithSegments_NoHint/policies.yaml
@@ -6,7 +6,30 @@ metadata:
         nsx-id: none
     creationTimestamp: null
     name: dns-policy
-    namespace: default
+    namespace: seg_a_and_b
+spec:
+    egress:
+        - ports:
+            - port: 53
+              protocol: UDP
+          to:
+            - namespaceSelector: {}
+              podSelector:
+                matchLabels:
+                    k8s-app: kube-dns
+    podSelector: {}
+    policyTypes:
+        - Egress
+---
+apiVersion: networking.k8s.io/v1
+kind: NetworkPolicy
+metadata:
+    annotations:
+        description: Network Policy To Allow Access To DNS Server
+        nsx-id: none
+    creationTimestamp: null
+    name: dns-policy
+    namespace: seg_c
 spec:
     egress:
         - ports:
@@ -28,8 +51,8 @@ metadata:
         description: 'src: (VMs within IPs 0.0.1.0/25) dst: (VMs within IPs 0.0.1.128/25) conn: TCP dst-ports: 445'
         nsx-id: "1004"
     creationTimestamp: null
-    name: policy-1
-    namespace: default
+    name: policy-2
+    namespace: seg_a_and_b
 spec:
     egress:
         - ports:
@@ -54,8 +77,8 @@ metadata:
         description: 'src: (VMs within IPs 0.0.1.0/25) dst: (VMs within IPs 0.0.1.128/25) conn: TCP dst-ports: 445'
         nsx-id: "1004"
     creationTimestamp: null
-    name: policy-2
-    namespace: default
+    name: policy-3
+    namespace: seg_a_and_b
 spec:
     ingress:
         - from:
@@ -80,15 +103,21 @@ metadata:
         description: 'src: (VMs within IPs 0.0.1.128/25) dst: (segment seg_c) conn: TCP dst-ports: 443'
         nsx-id: "1005"
     creationTimestamp: null
-    name: policy-3
-    namespace: default
+    name: policy-4
+    namespace: seg_a_and_b
 spec:
     egress:
         - ports:
             - port: 443
               protocol: TCP
           to:
-            - podSelector:
+            - namespaceSelector:
+                matchExpressions:
+                    - key: kubernetes.io/metadata.name
+                      operator: In
+                      values:
+                        - seg_c
+              podSelector:
                 matchExpressions:
                     - key: in_Segment__seg_c
                       operator: Exists
@@ -106,12 +135,18 @@ metadata:
         description: 'src: (VMs within IPs 0.0.1.128/25) dst: (segment seg_c) conn: TCP dst-ports: 443'
         nsx-id: "1005"
     creationTimestamp: null
-    name: policy-4
-    namespace: default
+    name: policy-5
+    namespace: seg_c
 spec:
     ingress:
         - from:
-            - podSelector:
+            - namespaceSelector:
+                matchExpressions:
+                    - key: kubernetes.io/metadata.name
+                      operator: In
+                      values:
+                        - seg_a_and_b
+              podSelector:
                 matchExpressions:
                     - key: VMs_within_IPs__0.0.1.128-25
                       operator: Exists
@@ -133,7 +168,22 @@ metadata:
         nsx-id: "1003"
     creationTimestamp: null
     name: default-deny
-    namespace: default
+    namespace: seg_a_and_b
+spec:
+    podSelector: {}
+    policyTypes:
+        - Ingress
+        - Egress
+---
+apiVersion: networking.k8s.io/v1
+kind: NetworkPolicy
+metadata:
+    annotations:
+        description: Default Deny Network Policy
+        nsx-id: "1003"
+    creationTimestamp: null
+    name: default-deny
+    namespace: seg_c
 spec:
     podSelector: {}
     policyTypes:
