--- a/pkg/synthesis/tests_expected_output/k8s_resources/ExampleInternalWithInterDenyAllowMixedSegments/pods.yaml
+++ b/pkg/synthesis/tests_expected_output/k8s_resources/ExampleInternalWithInterDenyAllowMixedSegments/pods.yaml
@@ -8,8 +8,11 @@ metadata:
         VMs_within_IPs__10.0.0.0-24: "true"
         VMs_within_IPs__10.0.0.0-30: "true"
         group__default-group: "true"
+        in_Segment__seg-6-7: "true"
+        in_Segment__seg_2-3: "true"
+        in_Segment__seg_4-5: "true"
     name: vm1
-    namespace: default
+    namespace: seg_4-5
 spec:
     containers: null
 status: {}
@@ -23,8 +26,11 @@ metadata:
         VMs_within_IPs__10.0.0.0-20: "true"
         VMs_within_IPs__10.0.0.0-24: "true"
         group__default-group: "true"
+        in_Segment__seg-6-7: "true"
+        in_Segment__seg_2-3: "true"
+        in_Segment__seg_4-5: "true"
     name: vm2
-    namespace: default
+    namespace: seg_4-5
 spec:
     containers: null
 status: {}
@@ -38,8 +44,11 @@ metadata:
         VMs_within_IPs__10.0.0.0-20: "true"
         VMs_within_IPs__10.0.0.0-24: "true"
         group__default-group: "true"
+        in_Segment__seg-6-7: "true"
+        in_Segment__seg_2-3: "true"
+        in_Segment__seg_4-5: "true"
     name: vm3
-    namespace: default
+    namespace: seg_4-5
 spec:
     containers: null
 status: {}
@@ -52,8 +61,10 @@ metadata:
         VMs_within_IPs__10.0.0.0-16: "true"
         VMs_within_IPs__10.0.0.0-20: "true"
         group__default-group: "true"
+        in_Segment__seg-6-7: "true"
+        in_Segment__seg_4-5: "true"
     name: vm4
-    namespace: default
+    namespace: seg_4-5
 spec:
     containers: null
 status: {}
@@ -66,8 +77,10 @@ metadata:
         VMs_within_IPs__10.0.0.0-16: "true"
         VMs_within_IPs__10.0.0.0-20: "true"
         group__default-group: "true"
+        in_Segment__seg-6-7: "true"
+        in_Segment__seg_4-5: "true"
     name: vm5
-    namespace: default
+    namespace: seg_4-5
 spec:
     containers: null
 status: {}
@@ -78,8 +91,9 @@ metadata:
     creationTimestamp: null
     labels:
         group__default-group: "true"
+        in_Segment__seg-6-7: "true"
     name: vm6
-    namespace: default
+    namespace: seg-6-7
 spec:
     containers: null
 status: {}
@@ -90,8 +104,9 @@ metadata:
     creationTimestamp: null
     labels:
         group__default-group: "true"
+        in_Segment__seg-6-7: "true"
     name: vm7
-    namespace: default
+    namespace: seg-6-7
 spec:
     containers: null
 status: {}
