--- a/pkg/synthesis/tests_expected_output/k8s_resources/ExampleInternalWithInterDenyAllowWithSegments/pods.yaml
+++ b/pkg/synthesis/tests_expected_output/k8s_resources/ExampleInternalWithInterDenyAllowWithSegments/pods.yaml
@@ -8,8 +8,9 @@ metadata:
         VMs_within_IPs__10.0.0.0-24: "true"
         VMs_within_IPs__10.0.0.0-30: "true"
         group__default-group: "true"
+        in_Segment__seg_1: "true"
     name: vm1
-    namespace: default
+    namespace: seg_1
 spec:
     containers: null
 status: {}
@@ -23,8 +24,9 @@ metadata:
         VMs_within_IPs__10.0.0.0-20: "true"
         VMs_within_IPs__10.0.0.0-24: "true"
         group__default-group: "true"
+        in_Segment__seg_2-3: "true"
     name: vm2
-    namespace: default
+    namespace: seg_2-3
 spec:
     containers: null
 status: {}
@@ -38,8 +40,9 @@ metadata:
         VMs_within_IPs__10.0.0.0-20: "true"
         VMs_within_IPs__10.0.0.0-24: "true"
         group__default-group: "true"
+        in_Segment__seg_2-3: "true"
     name: vm3
-    namespace: default
+    namespace: seg_2-3
 spec:
     containers: null
 status: {}
@@ -52,8 +55,9 @@ metadata:
         VMs_within_IPs__10.0.0.0-16: "true"
         VMs_within_IPs__10.0.0.0-20: "true"
         group__default-group: "true"
+        in_Segment__seg_4-5: "true"
     name: vm4
-    namespace: default
+    namespace: seg_4-5
 spec:
     containers: null
 status: {}
@@ -66,8 +70,9 @@ metadata:
         VMs_within_IPs__10.0.0.0-16: "true"
         VMs_within_IPs__10.0.0.0-20: "true"
         group__default-group: "true"
+        in_Segment__seg_4-5: "true"
     name: vm5
-    namespace: default
+    namespace: seg_4-5
 spec:
     containers: null
 status: {}
@@ -79,8 +84,9 @@ metadata:
     labels:
         VMs_within_IPs__10.0.0.0-16: "true"
         group__default-group: "true"
+        in_Segment__seg-6-7: "true"
     name: vm6
-    namespace: default
+    namespace: seg-6-7
 spec:
     containers: null
 status: {}
@@ -92,8 +98,9 @@ metadata:
     labels:
         VMs_within_IPs__10.0.0.0-16: "true"
         group__default-group: "true"
+        in_Segment__seg-6-7: "true"
     name: vm7
-    namespace: default
+    namespace: seg-6-7
 spec:
     containers: null
 status: {}
@@ -105,8 +112,9 @@ metadata:
     labels:
         VMs_within_IPs__172.16.10.10-16: "true"
         group__default-group: "true"
+        in_Segment__seg-8: "true"
     name: vm8
-    namespace: default
+    namespace: seg-8
 spec:
     containers: null
 status: {}
@@ -118,8 +126,9 @@ metadata:
     labels:
         VMs_within_IPs__192.168.0.0-16: "true"
         group__default-group: "true"
+        in_Segment__seg-9-10: "true"
     name: vm9
-    namespace: default
+    namespace: seg-9-10
 spec:
     containers: null
 status: {}
@@ -131,8 +140,9 @@ metadata:
     labels:
         VMs_within_IPs__192.168.0.0-16: "true"
         group__default-group: "true"
+        in_Segment__seg-9-10: "true"
     name: vm10
-    namespace: default
+    namespace: seg-9-10
 spec:
     containers: null
 status: {}
