--- a/pkg/synthesis/tests_expected_output/k8s_resources/ExampleHintsDisjointInferHintsNoGivenHints/policies.yaml
+++ b/pkg/synthesis/tests_expected_output/k8s_resources/ExampleHintsDisjointInferHintsNoGivenHints/policies.yaml
@@ -2,7 +2,7 @@ apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
     annotations:
-        description: 'src: (group = Dumbledore1 and group != Dumbledore2) dst: (group = Not Slytherin) conn: All Connections'
+        description: 'src: (group = Dumbledore1) dst: (group = Not Slytherin) conn: All Connections'
         nsx-id: "9200"
     creationTimestamp: null
     name: policy-0
@@ -24,8 +24,6 @@ spec:
         matchExpressions:
             - key: group__Dumbledore1
               operator: Exists
-            - key: group__Dumbledore2
-              operator: DoesNotExist
     policyTypes:
         - Egress
 ---
@@ -33,41 +31,10 @@ apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
     annotations:
-        description: 'src: (group = Dumbledore1) dst: (group = Not Slytherin and group != Gryffindor) conn: All Connections'
+        description: 'src: (group = Dumbledore1) dst: (group = Not Slytherin) conn: All Connections'
         nsx-id: "9200"
     creationTimestamp: null
     name: policy-1
-    namespace: default
-spec:
-    egress:
-        - to:
-            - namespaceSelector:
-                matchExpressions:
-                    - key: kubernetes.io/metadata.name
-                      operator: In
-                      values:
-                        - default
-              podSelector:
-                matchExpressions:
-                    - key: group__NotSlytherin
-                      operator: Exists
-                    - key: group__Gryffindor
-                      operator: DoesNotExist
-    podSelector:
-        matchExpressions:
-            - key: group__Dumbledore1
-              operator: Exists
-    policyTypes:
-        - Egress
----
-apiVersion: networking.k8s.io/v1
-kind: NetworkPolicy
-metadata:
-    annotations:
-        description: 'src: (group = Dumbledore1 and group != Dumbledore2) dst: (group = Not Slytherin) conn: All Connections'
-        nsx-id: "9200"
-    creationTimestamp: null
-    name: policy-2
     namespace: default
 spec:
     ingress:
@@ -82,8 +49,6 @@ spec:
                 matchExpressions:
                     - key: group__Dumbledore1
                       operator: Exists
-                    - key: group__Dumbledore2
-                      operator: DoesNotExist
     podSelector:
         matchExpressions:
             - key: group__NotSlytherin
@@ -95,8 +60,37 @@ apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
     annotations:
-        description: 'src: (group = Dumbledore1) dst: (group = Not Slytherin and group != Gryffindor) conn: All Connections'
-        nsx-id: "9200"
+        description: 'src: (group = Dumbledore2) dst: (group != Gryffindor) conn: All Connections'
+        nsx-id: "9201"
+    creationTimestamp: null
+    name: policy-2
+    namespace: default
+spec:
+    egress:
+        - to:
+            - namespaceSelector:
+                matchExpressions:
+                    - key: kubernetes.io/metadata.name
+                      operator: In
+                      values:
+                        - default
+              podSelector:
+                matchExpressions:
+                    - key: group__Gryffindor
+                      operator: DoesNotExist
+    podSelector:
+        matchExpressions:
+            - key: group__Dumbledore2
+              operator: Exists
+    policyTypes:
+        - Egress
+---
+apiVersion: networking.k8s.io/v1
+kind: NetworkPolicy
+metadata:
+    annotations:
+        description: 'src: (group = Dumbledore2) dst: (group != Gryffindor) conn: All Connections'
+        nsx-id: "9201"
     creationTimestamp: null
     name: policy-3
     namespace: default
@@ -111,136 +105,10 @@ spec:
                         - default
               podSelector:
                 matchExpressions:
-                    - key: group__Dumbledore1
-                      operator: Exists
-    podSelector:
-        matchExpressions:
-            - key: group__NotSlytherin
-              operator: Exists
-            - key: group__Gryffindor
-              operator: DoesNotExist
-    policyTypes:
-        - Ingress
----
-apiVersion: networking.k8s.io/v1
-kind: NetworkPolicy
-metadata:
-    annotations:
-        description: 'src: (group = Dumbledore2 and group != Dumbledore1) dst: (group != Gryffindor) conn: All Connections'
-        nsx-id: "9201"
-    creationTimestamp: null
-    name: policy-4
-    namespace: default
-spec:
-    egress:
-        - to:
-            - namespaceSelector:
-                matchExpressions:
-                    - key: kubernetes.io/metadata.name
-                      operator: In
-                      values:
-                        - default
-              podSelector:
-                matchExpressions:
-                    - key: group__Gryffindor
-                      operator: DoesNotExist
-    podSelector:
-        matchExpressions:
-            - key: group__Dumbledore2
-              operator: Exists
-            - key: group__Dumbledore1
-              operator: DoesNotExist
-    policyTypes:
-        - Egress
----
-apiVersion: networking.k8s.io/v1
-kind: NetworkPolicy
-metadata:
-    annotations:
-        description: 'src: (group = Dumbledore2) dst: (group = Not Slytherin and group != Gryffindor) conn: All Connections'
-        nsx-id: "9201"
-    creationTimestamp: null
-    name: policy-5
-    namespace: default
-spec:
-    egress:
-        - to:
-            - namespaceSelector:
-                matchExpressions:
-                    - key: kubernetes.io/metadata.name
-                      operator: In
-                      values:
-                        - default
-              podSelector:
-                matchExpressions:
-                    - key: group__NotSlytherin
-                      operator: Exists
-                    - key: group__Gryffindor
-                      operator: DoesNotExist
-    podSelector:
-        matchExpressions:
-            - key: group__Dumbledore2
-              operator: Exists
-    policyTypes:
-        - Egress
----
-apiVersion: networking.k8s.io/v1
-kind: NetworkPolicy
-metadata:
-    annotations:
-        description: 'src: (group = Dumbledore2 and group != Dumbledore1) dst: (group != Gryffindor) conn: All Connections'
-        nsx-id: "9201"
-    creationTimestamp: null
-    name: policy-6
-    namespace: default
-spec:
-    ingress:
-        - from:
-            - namespaceSelector:
-                matchExpressions:
-                    - key: kubernetes.io/metadata.name
-                      operator: In
-                      values:
-                        - default
-              podSelector:
-                matchExpressions:
-                    - key: group__Dumbledore2
-                      operator: Exists
-                    - key: group__Dumbledore1
-                      operator: DoesNotExist
-    podSelector:
-        matchExpressions:
-            - key: group__Gryffindor
-              operator: DoesNotExist
-    policyTypes:
-        - Ingress
----
-apiVersion: networking.k8s.io/v1
-kind: NetworkPolicy
-metadata:
-    annotations:
-        description: 'src: (group = Dumbledore2) dst: (group = Not Slytherin and group != Gryffindor) conn: All Connections'
-        nsx-id: "9201"
-    creationTimestamp: null
-    name: policy-7
-    namespace: default
-spec:
-    ingress:
-        - from:
-            - namespaceSelector:
-                matchExpressions:
-                    - key: kubernetes.io/metadata.name
-                      operator: In
-                      values:
-                        - default
-              podSelector:
-                matchExpressions:
                     - key: group__Dumbledore2
                       operator: Exists
     podSelector:
         matchExpressions:
-            - key: group__NotSlytherin
-              operator: Exists
             - key: group__Gryffindor
               operator: DoesNotExist
     policyTypes:
