--- a/pkg/synthesis/tests_expected_output/k8s_resources/ExampleHogwartsExternalAdmin_AdminPoliciesEnabled/adminPolicies.yaml
+++ b/pkg/synthesis/tests_expected_output/k8s_resources/ExampleHogwartsExternalAdmin_AdminPoliciesEnabled/adminPolicies.yaml
@@ -229,12 +229,7 @@ spec:
                 protocol: UDP
           to:
             - pods:
-                namespaceSelector:
-                    matchExpressions:
-                        - key: kubernetes.io/metadata.name
-                          operator: In
-                          values:
-                            - default
+                namespaceSelector: {}
                 podSelector:
                     matchExpressions:
                         - key: k8s-app
@@ -247,11 +242,6 @@ spec:
             namespaceSelector:
                 matchLabels:
                     kubernetes.io/metadata.name: default
-            podSelector:
-                matchExpressions:
-                    - key: k8s-app
-                      operator: In
-                      values:
-                        - kube-dns
+            podSelector: {}
 status:
     conditions: null
