change default for dns policy to false + add separate tests for dns policy
Signed-off-by: adisos <adisos@il.ibm.com>

--- a/pkg/synthesis/tests_expected_output/dns_tests/ExampleAppWithGroupsAndSegments_noAdmin/k8s_resources/policies.yaml
+++ b/pkg/synthesis/tests_expected_output/dns_tests/ExampleAppWithGroupsAndSegments_noAdmin/k8s_resources/policies.yaml
@@ -2,10 +2,56 @@ apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
     annotations:
+        description: NetworkPolicy to allow access to DNS for namespace T1-192-168-0-0
+        nsx-id: none
+    creationTimestamp: null
+    name: dns-policy-T1-192-168-0-0
+    namespace: T1-192-168-0-0
+spec:
+    egress:
+        - ports:
+            - port: 53
+              protocol: UDP
+          to:
+            - namespaceSelector: {}
+              podSelector:
+                matchLabels:
+                    k8s-app: kube-dns
+    podSelector: {}
+    policyTypes:
+        - Egress
+---
+apiVersion: networking.k8s.io/v1
+kind: NetworkPolicy
+metadata:
+    annotations:
+        description: NetworkPolicy to allow access to DNS for namespace T1-192-168-1-0
+        nsx-id: none
+    creationTimestamp: null
+    name: dns-policy-T1-192-168-1-0
+    namespace: T1-192-168-1-0
+spec:
+    egress:
+        - ports:
+            - port: 53
+              protocol: UDP
+          to:
+            - namespaceSelector: {}
+              podSelector:
+                matchLabels:
+                    k8s-app: kube-dns
+    podSelector: {}
+    policyTypes:
+        - Egress
+---
+apiVersion: networking.k8s.io/v1
+kind: NetworkPolicy
+metadata:
+    annotations:
         description: 'src: (group = foo-frontend) dst: (group = foo-backend) conn: TCP dst-ports: 80'
         nsx-id: "1027"
     creationTimestamp: null
-    name: policy-0
+    name: policy-2
     namespace: T1-192-168-0-0
 spec:
     egress:
@@ -37,7 +83,7 @@ metadata:
         description: 'src: (group = foo-frontend) dst: (group = foo-backend) conn: TCP dst-ports: 80'
         nsx-id: "1027"
     creationTimestamp: null
-    name: policy-1
+    name: policy-3
     namespace: T1-192-168-0-0
 spec:
     ingress:
@@ -69,7 +115,7 @@ metadata:
         description: 'src: (group = research-test-expr-2 and group != foo-app) dst: (group = foo-frontend) conn: TCP dst-ports: 445'
         nsx-id: "1025"
     creationTimestamp: null
-    name: policy-2
+    name: policy-4
     namespace: T1-192-168-1-0
 spec:
     egress:
@@ -103,7 +149,7 @@ metadata:
         description: 'src: (group = research-test-expr-2) dst: (group = foo-frontend and group != foo-app) conn: TCP dst-ports: 445'
         nsx-id: "1025"
     creationTimestamp: null
-    name: policy-3
+    name: policy-5
     namespace: T1-192-168-1-0
 spec:
     egress:
@@ -131,7 +177,7 @@ metadata:
         description: 'src: (group = research-test-expr-2 and group != foo-app) dst: (group = foo-frontend) conn: TCP dst-ports: 445'
         nsx-id: "1025"
     creationTimestamp: null
-    name: policy-4
+    name: policy-6
     namespace: T1-192-168-0-0
 spec:
     ingress:
@@ -165,7 +211,7 @@ metadata:
         description: 'src: (group = bar-app and group != foo-app) dst: (group = bar-app) conn: TCP dst-ports: 443'
         nsx-id: "1024"
     creationTimestamp: null
-    name: policy-5
+    name: policy-7
     namespace: T1-192-168-1-0
 spec:
     egress:
@@ -199,7 +245,7 @@ metadata:
         description: 'src: (group = bar-app) dst: (group = bar-app and group != foo-app) conn: TCP dst-ports: 443'
         nsx-id: "1024"
     creationTimestamp: null
-    name: policy-6
+    name: policy-8
     namespace: T1-192-168-1-0
 spec:
     egress:
@@ -233,7 +279,7 @@ metadata:
         description: 'src: (group = bar-app and group != foo-app) dst: (group = bar-app) conn: TCP dst-ports: 443'
         nsx-id: "1024"
     creationTimestamp: null
-    name: policy-7
+    name: policy-9
     namespace: T1-192-168-1-0
 spec:
     ingress:
@@ -267,7 +313,7 @@ metadata:
         description: 'src: (group = bar-app) dst: (group = bar-app and group != foo-app) conn: TCP dst-ports: 443'
         nsx-id: "1024"
     creationTimestamp: null
-    name: policy-8
+    name: policy-10
     namespace: T1-192-168-1-0
 spec:
     ingress:
