--- a/pkg/synthesis/tests_expected_output/dns_tests/ExampleHogwarts_admin/k8s_resources/adminPolicies.yaml
+++ b/pkg/synthesis/tests_expected_output/dns_tests/ExampleHogwarts_admin/k8s_resources/adminPolicies.yaml
@@ -2,10 +2,44 @@ apiVersion: policy.networking.k8s.io/v1alpha1
 kind: AdminNetworkPolicy
 metadata:
     annotations:
+        description: Admin Network Policy To Allow Egress Access To DNS Server
+        nsx-id: none
+    creationTimestamp: null
+    name: egress-dns-policy
+spec:
+    egress:
+        - action: Allow
+          ports:
+            - portNumber:
+                port: 53
+                protocol: UDP
+          to:
+            - pods:
+                namespaceSelector: {}
+                podSelector:
+                    matchExpressions:
+                        - key: k8s-app
+                          operator: In
+                          values:
+                            - kube-dns
+    priority: 1
+    subject:
+        pods:
+            namespaceSelector:
+                matchLabels:
+                    kubernetes.io/metadata.name: default
+            podSelector: {}
+status:
+    conditions: null
+---
+apiVersion: policy.networking.k8s.io/v1alpha1
+kind: AdminNetworkPolicy
+metadata:
+    annotations:
         description: '(jump_to_application: (src: (group = Gryffindor) dst: (group = Gryffindor) conn: TCP)'
         nsx-id: "10218"
     creationTimestamp: null
-    name: admin-policy-0
+    name: admin-policy-1
 spec:
     egress:
         - action: Pass
@@ -26,7 +60,7 @@ spec:
                     matchExpressions:
                         - key: group__Gryffindor
                           operator: Exists
-    priority: 1
+    priority: 2
     subject:
         pods:
             namespaceSelector:
@@ -46,7 +80,7 @@ metadata:
         description: '(jump_to_application: (src: (group = Gryffindor) dst: (group = Gryffindor) conn: TCP)'
         nsx-id: "10218"
     creationTimestamp: null
-    name: admin-policy-1
+    name: admin-policy-2
 spec:
     ingress:
         - action: Pass
@@ -67,7 +101,7 @@ spec:
                 end: 65535
                 protocol: TCP
                 start: 1
-    priority: 2
+    priority: 3
     subject:
         pods:
             namespaceSelector:
@@ -87,7 +121,7 @@ metadata:
         description: '(jump_to_application: (src: (group = Hufflepuff) dst: (group = Hufflepuff) conn: UDP dst-ports: 300-320)'
         nsx-id: "10219"
     creationTimestamp: null
-    name: admin-policy-2
+    name: admin-policy-3
 spec:
     ingress:
         - action: Pass
@@ -108,7 +142,7 @@ spec:
                 end: 320
                 protocol: UDP
                 start: 300
-    priority: 3
+    priority: 4
     subject:
         pods:
             namespaceSelector:
@@ -128,7 +162,7 @@ metadata:
         description: '(jump_to_application: (src: (group = Slytherin) dst: (group = Slytherin) conn: All Connections)'
         nsx-id: "10220"
     creationTimestamp: null
-    name: admin-policy-3
+    name: admin-policy-4
 spec:
     egress:
         - action: Pass
@@ -145,7 +179,7 @@ spec:
                     matchExpressions:
                         - key: group__Slytherin
                           operator: Exists
-    priority: 4
+    priority: 5
     subject:
         pods:
             namespaceSelector:
@@ -165,7 +199,7 @@ metadata:
         description: '(jump_to_application: (src: (group = Slytherin) dst: (group = Slytherin) conn: All Connections)'
         nsx-id: "10220"
     creationTimestamp: null
-    name: admin-policy-4
+    name: admin-policy-5
 spec:
     ingress:
         - action: Pass
@@ -182,7 +216,7 @@ spec:
                         - key: group__Slytherin
                           operator: Exists
           ports: null
-    priority: 5
+    priority: 6
     subject:
         pods:
             namespaceSelector:
@@ -202,7 +236,7 @@ metadata:
         description: '(jump_to_application: (src: (group = Dumbledore) dst: (group = Gryffindor) conn: All Connections)'
         nsx-id: "10221"
     creationTimestamp: null
-    name: admin-policy-5
+    name: admin-policy-6
 spec:
     egress:
         - action: Pass
@@ -219,7 +253,7 @@ spec:
                     matchExpressions:
                         - key: group__Gryffindor
                           operator: Exists
-    priority: 6
+    priority: 7
     subject:
         pods:
             namespaceSelector:
@@ -239,7 +273,7 @@ metadata:
         description: '(jump_to_application: (src: (group = Dumbledore) dst: (group = Gryffindor) conn: All Connections)'
         nsx-id: "10221"
     creationTimestamp: null
-    name: admin-policy-6
+    name: admin-policy-7
 spec:
     ingress:
         - action: Pass
@@ -256,7 +290,7 @@ spec:
                         - key: group__Dumbledore
                           operator: Exists
           ports: null
-    priority: 7
+    priority: 8
     subject:
         pods:
             namespaceSelector:
@@ -276,7 +310,7 @@ metadata:
         description: '(deny: (src: (*) dst: (*) conn: All Connections)'
         nsx-id: "10300"
     creationTimestamp: null
-    name: admin-policy-7
+    name: admin-policy-8
 spec:
     egress:
         - action: Deny
@@ -290,7 +324,7 @@ spec:
                           values:
                             - default
                 podSelector: {}
-    priority: 8
+    priority: 9
     subject:
         pods:
             namespaceSelector:
@@ -307,7 +341,7 @@ metadata:
         description: '(deny: (src: (*) dst: (*) conn: All Connections)'
         nsx-id: "10300"
     creationTimestamp: null
-    name: admin-policy-8
+    name: admin-policy-9
 spec:
     ingress:
         - action: Deny
@@ -321,7 +355,7 @@ spec:
                             - default
                 podSelector: {}
           ports: null
-    priority: 9
+    priority: 10
     subject:
         pods:
             namespaceSelector:
